--- a/preprocess/prepro_slides.ipynb
+++ b/preprocess/prepro_slides.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -134,17 +134,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello data in the path /Users/gracer/Desktop/data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "main()#call main to execute all our globals then run our prepro function"
    ]
@@ -190,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -216,9 +208,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -284,21 +275,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "#try running this \n",
@@ -322,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -359,17 +342,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain_mask.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain_mcf.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-rest_bold.nii.gz']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input=glob.glob('/Users/gracer/Desktop/data/sub-*/func/sub-*.nii.gz')\n",
     "print input[1:5]"
@@ -389,40 +364,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "149"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "len(input)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain.nii.gz'"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input[1]"
    ]
@@ -440,23 +393,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "my path is /Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain.nii.gz\n",
-      "['', 'Users', 'gracer', 'Desktop', 'data', 'sub-10159', 'func', 'sub-10159_task-bart_bold_brain.nii.gz']\n",
-      "sub-10159\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x=input[1]\n",
     "print('my path is '+x)\n",
@@ -475,17 +418,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sub-10159\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sub=input[1].split('/')[5]\n",
     "print(sub)"
@@ -504,17 +439,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sub-10159_task-bart_bold_brain\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "subtask=input[1].split('/')[7].split('.')[0]\n",
     "#subtask=subtask.strip('.nii.gz')\n",
@@ -523,17 +450,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sub-10159_task-bart_bold_brain_brain\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "output=subtask+'_brain'\n",
     "print(output)"
@@ -552,22 +471,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-29-c263dd53731b>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-29-c263dd53731b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    os.system('bet' x output '-F')\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.system('bet' x output '-F')"
    ]
@@ -586,18 +496,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain.nii.gz\n",
-      "sub-10159_task-bart_bold_brain_brain\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#os.system('bet' x output '-F')\n",
     "#print(x)\n",
@@ -639,23 +540,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "hideOutput": true
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'glob' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-4e60444a7e4b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minput\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mglob\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/Users/gracer/Desktop/data/sub-*/func/sub-*.nii.gz'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m '''\n\u001b[1;32m      4\u001b[0m \u001b[0mthis\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0ma\u001b[0m \u001b[0mlittle\u001b[0m \u001b[0mlong\u001b[0m \u001b[0mto\u001b[0m \u001b[0mtype\u001b[0m \u001b[0meach\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mit\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mreally\u001b[0m \u001b[0measy\u001b[0m \u001b[0mto\u001b[0m \u001b[0mmess\u001b[0m \u001b[0mup\u001b[0m \u001b[0mthe\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mformating\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'glob' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input=glob.glob('/Users/gracer/Desktop/data/sub-*/func/sub-*.nii.gz')\n",
     "\n",
@@ -678,18 +567,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/gracer/Desktop/data/sub-*/func/sub-*.niig.gz\n",
-      "['/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_bra.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_bra_mask.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain_mask.nii.gz']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#input=glob.glob('/Users/gracer/Desktop/data/sub-*/func/sub-*.nii.gz')\n",
     "basedir='/Users/gracer/Desktop/data'\n",
@@ -712,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,17 +610,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[H\u001b[2J"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#main()\n",
     "#%clear"
@@ -780,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,19 +675,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[H\u001b[2J"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "main()\n",
     "#%clear"
@@ -845,9 +709,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -934,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1032,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1126,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1297,15 +1160,15 @@
     "### 4. Check our text output files for subjects for excessive motion\n",
     "```\n",
     "if os.path.isfile(\"motion_assessment/%s_confound.txt\"%(output))==False:\n",
-    "                            os.system(\"touch motion_assessment/%s_confound.txt\"%(output))\n",
+    "    os.system(\"touch motion_assessment/%s_confound.txt\"%(output))\n",
     "                        \n",
-    "                        check = subprocess.check_output(\"grep -o 1 motion_assessment/%s_confound.txt | wc -l\"%(output), shell=True)\n",
-    "                        num_scrub = [int(s) for s in check.split() if s.isdigit()]\n",
+    "check = subprocess.check_output(\"grep -o 1 motion_assessment/%s_confound.txt | wc -l\"%(output), shell=True)\n",
+    "num_scrub = [int(s) for s in check.split() if s.isdigit()]\n",
     "                        \n",
-    "                        if num_scrub[0]>45:\n",
-    "                            with open(out_bad_bold_list, \"a\") as myfile:\n",
-    "                                myfile.write(\"%s\\n\"%(output))\n",
-    "                            myfile.close()\n",
+    "if num_scrub[0]>45:\n",
+    "    with open(out_bad_bold_list, \"a\") as myfile:\n",
+    "        myfile.write(\"%s\\n\"%(output))\n",
+    "    myfile.close()\n",
     "```\n",
     "1. We are using our favorite if/else statement to check that the confound.txt exists.\n",
     "  * But what about perfect subjects? They won't have a confound.txt??? HALP\n",
@@ -1313,11 +1176,25 @@
     "  ```\n",
     "  os.system(\"touch motion_assessment/%s_confound.txt\"%(output))\n",
     "  ```\n",
-    "  to create a blank text file with the correct name for our 1st level feats to find\n",
+    "  to create a blank text file with the correct name for our 1st level feats to find\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "2. Most of our particpants aren't perfectly still, so we want to create a check variable:\n",
     "  * We are using a new module called subprocess\n",
     "  * This operates very similar to os.system, but we can define the type of shell and use the additional check_output functionality to save our output to a variable\n",
     "  * So here we are searching for our confound.txt using grep, then we are counting the lines in the file (wc -l)\n",
+    "    ```\n",
+    "    check = subprocess.check_output(\"grep -o 1 motion_assessment/%s_confound.txt | wc -l\"%(output), shell=True)\n",
+    "    num_scrub = [int(s) for s in check.split() if s.isdigit()]\n",
+    "    ```\n",
     "3. Next we are creating a num_scrub variable:\n",
     "  * This is a weird looking loop!\n",
     "  * We could have also written it as:\n",
@@ -1326,7 +1203,17 @@
     "      if s.isdigit:\n",
     "          num_scrub=int(s)\n",
     "  ```\n",
-    "  * Basically we want to remove white space with split, check if it is a digit, and make it an integer if it is\n",
+    "  * Basically we want to remove white space with split, check if it is a digit, and make it an integer if it is"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "4. Great we have an integer now we can check if that integer is bigger or smaller than our \"bad\" criteria\n",
     "  * Our final loop compares our num_scrub to a criteria we set (45)\n",
     "  * If num_scrub is bigger we want to note it so we are going to open a file\n",
