added git breaks

--- a/preprocess/prepro_slides.ipynb
+++ b/preprocess/prepro_slides.ipynb
@@ -19,12 +19,25 @@
     }
    },
    "source": [
+    "## Open up a fresh blank script in your Spyder IDE and save it as prepro.py\n",
+    "For this tutorial you will input all code into this script and periodically commit your changes and push them to github when you see the logo \n",
+    "![](https://imageog.flaticon.com/icons/png/512/3/3641.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## First thing we will always do is load our modules"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -49,8 +62,8 @@
     }
    },
    "source": [
-    "### Often times we won't know all the modules we want to import right off the bat  but I like to make sure that as I am scripting I always put my modules at the. \n",
-    "### Top this allows others who may use my script to make sure they have all the necessary tools"
+    "### Often times we won't know all the modules we want to import right off the bat  but I like to make sure that as I am scripting I always put my modules at the top. \n",
+    "### This allows others who may use my script to make sure they have all the necessary tools"
    ]
   },
   {
@@ -115,8 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -134,11 +148,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello data in the path /Users/gracer/Desktop/data\n"
+     ]
+    }
+   ],
    "source": [
     "main()#call main to execute all our globals then run our prepro function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](https://imageog.flaticon.com/icons/png/512/3/3641.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF)"
    ]
   },
   {
@@ -182,8 +211,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -210,6 +240,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -231,7 +262,8 @@
     }
    },
    "source": [
-    "## Let's start with skull stripping using fsl's BET function. This is a linux based command so we are going to need to use a module to python to understand it."
+    "## Let's start with skull stripping using fsl's BET function. \n",
+    "## This is a linux based command so we are going to need to use a module to python to understand it."
    ]
   },
   {
@@ -275,13 +307,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "#try running this \n",
@@ -307,6 +347,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -342,12 +383,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain_mask.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-bart_bold_brain_mcf.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-rest_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-rest_bold_brain.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-rest_bold_brain_mask.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-rest_bold_brain_mcf.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-scap_bold.nii.gz', '/Users/gracer/Desktop/data/sub-10159/func/sub-10159_task-scap_bold_brain.nii.gz']\n"
+     ]
+    }
+   ],
    "source": [
     "input=glob.glob('/Users/gracer/Desktop/data/sub-*/func/sub-*.nii.gz')\n",
-    "print input[1:5]"
+    "print(input[0:10])"
    ]
   },
   {
@@ -364,20 +413,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "324"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(input)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/gracer/Desktop/data/sub-10299/func/sub-10299_task-stopsignal_bold_brain_mask.nii.gz'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "input[1]"
+    "input[-1]"
    ]
   },
   {
@@ -393,20 +464,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub-10159\n"
+     ]
+    }
+   ],
    "source": [
-    "x=input[1]\n",
-    "print('my path is '+x)\n",
-    "y=x.split('/')\n",
-    "print (y)\n",
-    "sub=y[5]\n",
-    "print sub"
+    "#x=input[1]\n",
+    "#print('my path is '+x)\n",
+    "#y=x.split('/')\n",
+    "#print (y)\n",
+    "#whatcomp=y[2]\n",
+    "#sub=y[5]\n",
+    "#print sub\n",
+    "\n",
+    "sub=input[1].split('/')[5]\n",
+    "print(sub)"
    ]
   },
   {
@@ -419,7 +502,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sub=input[1].split('/')[5]\n",
@@ -439,9 +524,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub-10159_task-bart_bold_brain\n"
+     ]
+    }
+   ],
    "source": [
     "subtask=input[1].split('/')[7].split('.')[0]\n",
     "#subtask=subtask.strip('.nii.gz')\n",
@@ -450,9 +543,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub-10159_task-bart_bold_brain_brain\n"
+     ]
+    }
+   ],
    "source": [
     "output=subtask+'_brain'\n",
     "print(output)"
@@ -471,13 +572,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-26-c263dd53731b>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-c263dd53731b>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    os.system('bet' x output '-F')\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "os.system('bet' x output '-F')"
    ]
@@ -496,9 +606,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#os.system('bet' x output '-F')\n",
     "#print(x)\n",
@@ -540,18 +663,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "hideOutput": true
    },
    "outputs": [],
    "source": [
     "input=glob.glob('/Users/gracer/Desktop/data/sub-*/func/sub-*.nii.gz')\n",
-    "\n",
-    "'''\n",
-    "this is a little long to type each time, \n",
-    "and it is really easy to mess up the / formating \n",
-    "'''"
+    "#print input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## this is a little long to type each time, \n",
+    "## and it is really easy to mess up the / formating "
    ]
   },
   {
@@ -567,16 +694,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#input=glob.glob('/Users/gracer/Desktop/data/sub-*/func/sub-*.nii.gz')\n",
     "basedir='/Users/gracer/Desktop/data'\n",
-    "path=os.path.join(basedir,'sub-*','func','sub-*.niig.gz')\n",
-    "print(path)\n",
-    "input=glob.glob(os.path.join(basedir,'sub-*','func','sub-*.nii.gz'))\n",
-    "print(input[1:5])"
+    "path=os.path.join(basedir,'sub-*','func','sub-*.nii.gz')\n",
+    "#print(path)\n",
+    "#input=glob.glob(path)\n",
+    "#len(input[1:5])\n",
+    "os.path.exists(basedir)"
    ]
   },
   {
@@ -592,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,13 +748,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](https://imageog.flaticon.com/icons/png/512/3/3641.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#main()\n",
-    "#%clear"
+    "main()\n",
+    "#prepro(os.path.join('Users','gracer','Desktop','data'))"
    ]
   },
   {
@@ -653,7 +803,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def prepro(basedir):\n",
@@ -677,12 +829,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "main()\n",
     "#%clear"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![](https://imageog.flaticon.com/icons/png/512/3/3641.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF)"
    ]
   },
   {
@@ -711,6 +875,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -799,6 +964,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -890,6 +1056,17 @@
     }
    },
    "source": [
+    "![](https://imageog.flaticon.com/icons/png/512/3/3641.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## What about motion correction and motion QA???"
    ]
   },
@@ -897,6 +1074,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -991,6 +1169,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -1303,6 +1482,15 @@
     "   * It is using our counter (i) to grab each line\n",
     "5. With our nice list we can now open a file to write to and each list item \n",
     "   * We are using the same counter so we don't mix up the parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "![](https://imageog.flaticon.com/icons/png/512/3/3641.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF)"
    ]
   },
   {
