fixed varibable names

--- a/feat_scripts/Feat_Level_1.ipynb
+++ b/feat_scripts/Feat_Level_1.ipynb
@@ -1997,6 +1997,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Concept check: Now that we have a dictionary of our png files, create a loop that will get the file and input it into html formatting. If you are stuck look how we did this in the preprocessing script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "   for key in dict_of_files:\n",
+    "            os.system(\"echo '<p>=============<p> %s %s <br><IMG BORDER=0 SRC=%s WIDTH=%s></BODY></HTML>' >> %s\"%(sub,key,list_of_files[key],'100%', outfile))\n",
+    "#            shutil.copy(dict_of_files[key],writedir)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
